--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>First commits</title>
 </head>
 <body>
-	<h5>First commit testing</h5>
+	<h5>First commit to github</h5>
+	<h4>Second commit to github</h4>
 </body>
 </html>
